tests/copies/newAndNeedChangeTests/fail/Case.java
package fail;

import java.lang.System;

public class Case {

  public static void main(String[] args ) {
    boolean case = true;
  }

}
